--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nestjs/cqrs": "^10.2.8",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ulidx": "^2.4.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
