--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.8",
     "@nestjs/platform-express": "^10.0.0",
+    "node-mocks-http": "^1.16.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "ulidx": "^2.4.1"
