--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mikro-orm/core": "^6.4.0",
+    "@mikro-orm/migrations": "^6.4.0",
+    "@mikro-orm/nestjs": "^6.0.2",
+    "@mikro-orm/reflection": "^6.4.0",
+    "@mikro-orm/sqlite": "^6.4.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -31,6 +36,7 @@
     "ulidx": "^2.4.1"
   },
   "devDependencies": {
+    "@mikro-orm/cli": "^6.4.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
